--- a/Css_Basic/10_inline_block.html
+++ b/Css_Basic/10_inline_block.html
@@ -16,7 +16,7 @@
 
     img {
       display: block;
-      margin: auto;
+      margin: auto; /* display must be block to go this// wont work in inline*/
     }
 
     .box {
