--- a/Css_Basic/11_position.html
+++ b/Css_Basic/11_position.html
@@ -63,3 +63,9 @@
   <div id="box-5" class="box"></div>
 </body>
 </html>
+
+<!-- static 
+    relative: (top/left/bottom/right)
+    abosolute - parent
+    fixed : veiwport
+    sticky : scroll postion-->
