--- a/Project_hotel/index.html
+++ b/Project_hotel/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Welcome to the most Extraordinary hotel in Boston">
     <meta name="keywords" content="hotel,boston hotel,new england hotel">
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">">
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel BT | Welcome</title>
 </head>
@@ -21,7 +24,44 @@
                 </ul>
             </div>
         </nav>
+  
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi fugiat laboriosam maxime expedita odio quo sapiente cupiditate voluptate harum rerum?</p>
+                    <a class="btn" href="about.html">About Out Hotel</a>
+                </div>
+            </div>
+        </div>
+
     </header>
-    
+
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span> Of Out Hotel</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur odit velit doloribus beatae officia vel iusto dignissimos! Iste ex velit autem impedit vero obcaecati, asperiores recusandae repellendus qui voluptatibus dolore eaque odit quasi quia dicta hic eius enim. Rem, asperiores?</p>
+            <a href="about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
+
+    <section id="features">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, facilis.</p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
+              <h3>Free Meals</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, facilis.</p>
+        </div>
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
+              <h3>Fitness Room</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, facilis.</p>
+        </div>
+    </section>
 </body>
 </html>
