--- a/Project_hotel/index.html
+++ b/Project_hotel/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="hotel,boston hotel,new england hotel">
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">">
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel BT | Welcome</title>
 </head>
@@ -63,5 +63,11 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, facilis.</p>
         </div>
     </section>
+
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2019, All Rights Reserved</p>
+    </footer>
 </body>
 </html>
